--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 JWT_SECRET=top_secret_for_jwt_signing_123456
+PORT=5000                 # Express服务器监听的端口
+DB_HOST=127.0.0.1 # 数据库主机地址
+DB_USER=root      # 数据库用户名
+DB_PASSWORD=0402Jing?  # 数据库密码（敏感信息！）
+DB_NAME=admin_db     # 数据库名称
+DB_PORT=3306              # 数据库端口
