--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://admin-project-production-4417.up.railway.app
+VITE_API_BASE_URL=https://admin-project-production-4417.up.railway.app/api
