--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,3 +1,4 @@
+JWT_SECRET=top_secret_for_jwt_signing_123456
 PORT=5000                 # Express服务器监听的端口
 DB_HOST=mysql.railway.internal # 数据库主机地址
 DB_USER=root      # 数据库用户名
