--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,7 +1,7 @@
 JWT_SECRET=top_secret_for_jwt_signing_123456
 PORT=5000                 # Express服务器监听的端口
-DB_HOST=metro.proxy.rlwy.net # 数据库主机地址
+DB_HOST=mysql.railway.internal # 数据库主机地址
 DB_USER=root      # 数据库用户名
 DB_PASSWORD=vMFWKMnPiRhJIYRtbKItFArUaFvDWHBK # 数据库密码（敏感信息！）
 DB_NAME=railway     # 数据库名称
-DB_PORT=58649              # 数据库端口
+DB_PORT=3306              # 数据库端口
